kubernetes/applications/media/ersatztv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ersatztv

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: ersatztv

  ports:
    - name: http
      appProtocol: http
      port: 8409
      targetPort: http
      protocol: TCP
